aws/performance/run0/metrics/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: oras-service
spec:
  selector:
    oras-namespace: default
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oras-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oras-service
            port: 
              number: 5000
